--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Henrik Biermann
+descritpion: Hi, I am Henrik and I am a Phd at the [Institute of Exercise Training and Sport Informatics](https://www.dshs-koeln.de/institut-fuer-trainingswissenschaft-und-sportinformatik/)] @ the [German Sports University Cologne](https://www.dshs-koeln.de/english/)
+
